--- a/gradle.properties
+++ b/gradle.properties
@@ -2,22 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.1
-	loader_version=0.14.21
+# check these on https://modmuss50.me/fabric.html
+minecraft_version=1.20.1
 
 # Mod Properties
-	mod_version = 1.0
-	maven_group = top.xiaomckedou233
-	archives_base_name = NoAnySUS
+mod_version = 1.1
+maven_group = top.xiaomckedou233
+archives_base_name = NoAnySUS
 
-# Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.84.0+1.20.1
-
-# Speed
-    loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-    loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-    loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
-    loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-    loom_fabric_repository=https://repository.hanbings.io/proxy/
+deps.fabric_loader=0.16.14
+deps.fabric_api=[VERSIONED]
