--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,23 @@ pluginManagement {
             url = 'https://maven.fabricmc.net/'
         }
         gradlePluginPortal()
+        maven {
+            name = 'KikuGie Snapshots'
+            url = 'https://maven.kikugie.dev/snapshots'
+        }
+    }
+}
+
+plugins {
+    id("dev.kikugie.stonecutter") version "0.7.5"
+}
+
+stonecutter {
+    kotlinController = false
+    centralScript = "build.gradle"
+
+    create(getRootProject()) {
+        versions "1.20.1", "1.20.2", "1.20.3", "1.20.4", "1.20.5", "1.20.6", "1.21", "1.21.1", "1.21.2", "1.21.2", "1.21.3", "1.21.4", "1.21.5", "1.21.5", "1.21.6", "1.21.7", "1.21.8"
+        vcsVersion = "1.20.1"
     }
 }
